# airas-20251115-101201-matsuzawa

./: README.md  pyproject.toml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
.research/iteration1/comparative-1-iter1-Qwen3-0.6B-4-bit-QLoRA-gsm8k/: metrics.json
.research/iteration1/comparison/: aggregated_metrics.json  comparison_significance_tests.txt
.research/iteration1/proposed-iter1-Qwen3-0.6B-4-bit-QLoRA-gsm8k/: metrics.json
.research/latex/iclr2024/: paper.tex  references.bib
branches/main/: index.html
config/: config.yaml
config/runs/: comparative-1-iter1-Qwen3-0.6B-4-bit-QLoRA-gsm8k.yaml  proposed-iter1-Qwen3-0.6B-4-bit-QLoRA-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
