[project]
name = "zenith-experiments"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.38",
    "datasets>=2.14",
    "accelerate>=0.24",
    "bitsandbytes>=0.43",
    "peft>=0.6",
    "hydra-core>=1.3",
    "wandb>=0.16",
    "optuna>=3.5",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pynvml>=11.5",
    "scipy>=1.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"